examples/bad/static_error_array_type_mismatch1.ps
[int] arr = [1, 2, true];